Expose indexWriter.forceMerge(1) as mergeSegments()